2022-12-04T16:02:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3614012342 # 682
* notice: last 14d: unq all: 2 5744
* notice: prev accum: outdated-unq outdated-all / unq all: 1244 92717 / 1266 98487
* notice: next accum: outdated-unq outdated-all / unq all: 1244 92717 / 1266 98461
* notice: prev exec diff / last date diff / accum: unq all: +0 +123 -0 -149 / +1 +266 -0 -0 / 1 266
* notice: removed / changed dates: [] / [2022-11-20 2022-12-04]

2022-12-04T08:04:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3612350133 # 681
* notice: last 14d: unq all: 2 5770
* notice: prev accum: outdated-unq outdated-all / unq all: 1244 92717 / 1265 98520
* notice: next accum: outdated-unq outdated-all / unq all: 1244 92717 / 1266 98487
* notice: prev exec diff / last date diff / accum: unq all: +1 +145 -0 -178 / +1 +143 -0 -0 / 1 143
* notice: removed / changed dates: [] / [2022-11-20 2022-12-03 2022-12-04]

2022-12-04T00:26:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3610892035 # 680
* notice: last 14d: unq all: 2 5803
* notice: prev accum: outdated-unq outdated-all / unq all: 1242 92298 / 1265 98042
* notice: next accum: outdated-unq outdated-all / unq all: 1244 92717 / 1265 98520
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -22 / +1 +415 -0 -0 / 1 415
* notice: removed / changed dates: [2022-11-19] / [2022-11-20 2022-12-03]

2022-12-03T16:01:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3609229013 # 679
* notice: last 14d: unq all: 2 5744
* notice: prev accum: outdated-unq outdated-all / unq all: 1242 92298 / 1265 98068
* notice: next accum: outdated-unq outdated-all / unq all: 1242 92298 / 1265 98042
* notice: prev exec diff / last date diff / accum: unq all: +0 +123 -0 -149 / +1 +266 -0 -0 / 1 266