@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T08:08:01Z",
-  "count" : 414,
+  "timestamp" : "2022-12-05T00:26:06Z",
+  "count" : 390,
   "count_minmax" : [ 141, 414 ],
-  "count_decinc" : [ -0, +414 ],
+  "count_decinc" : [ -24, +414 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
