@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-12-04T16:02:00Z",
-  "count" : 266,
-  "count_minmax" : [ 143, 266 ],
-  "count_decinc" : [ -0, +266 ],
+  "timestamp" : "2022-12-05T00:26:06Z",
+  "count" : 415,
+  "count_minmax" : [ 143, 415 ],
+  "count_decinc" : [ -0, +415 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
