@@ -1,15 +1,10 @@
 {
-  "count": 5744,
+  "count": 5801,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-11-20T00:00:00Z",
-      "count": 68,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-11-21T00:00:00Z",
-      "count": 414,
+      "count": 390,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-12-04T00:00:00Z",
-      "count": 266,
+      "count": 415,
       "uniques": 1
     }
   ]
