@@ -1,3 +1,11 @@
+2022-12-05T00:26:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3615798437 # 683
+* notice: last 14d: unq all: 2 5801
+* notice: prev accum: outdated-unq outdated-all / unq all: 1244 92717 / 1266 98461
+* notice: next accum: outdated-unq outdated-all / unq all: 1246 93134 / 1266 98935
+* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -24 / +1 +415 -0 -0 / 1 415
+* notice: removed / changed dates: [2022-11-20] / [2022-11-21 2022-12-04]
+
 2022-12-04T16:02:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3614012342 # 682
 * notice: last 14d: unq all: 2 5744
